fix wrapping issues with Welcome message, style Login button (one that shows up in welcome message after registration).

--- a/emas/theme/static/css/styles.css
+++ b/emas/theme/static/css/styles.css
@@ -807,15 +807,26 @@ h2.spacing {
 }      
 
 .home-left-heading,
-.home-right-heading {
+.home-right-heading,
+.welcome {
     position: absolute;
     background: #ffffff;
     padding: 0px 5px 0 5px;
     z-index: 3;
 }
 
-.home-left-heading {
+.welcome {
     left: 50px;
+    top: -10px; 
+}
+
+.home-left-heading.signup {
+    left: 50px;
+    top: -10px;
+}
+
+.home-left-heading.fullname {
+    left: 124px;
     top: -10px;
 }
 
@@ -1462,7 +1473,8 @@ p#order-discount {
 input.searchPage.searchButton, /* search */
 .formControls input.context,  /* login */
 .actionButtons input.context, /* register */ 
-#mail_password input.context { /* start password reset */ 
+#mail_password input.context, /* start password reset */ 
+input.standalone {  /* login right after one has registered */
 
   display: inline-block;
   *display: inline;
@@ -1516,7 +1528,11 @@ input.searchPage.searchButton.active,
 #mail_password input.context:hover,
 #mail_password input.context:focus,
 #mail_password input.context:active,
-#mail_password input.context.active {
+#mail_password input.context.active,
+input.standalone:hover,
+input.standalone:focus,
+input.standalone:active,
+input.standalone.active {
   color: #333333;
   background-color: #e6e6e6;
   *background-color: #d9d9d9;
@@ -1528,7 +1544,9 @@ input.searchPage.searchButton.active,
 .actionButtons input.context:active,
 .actionButtons input.context.active,
 #mail_password input.context:active,
-#mail_password input.context.active {
+#mail_password input.context.active,
+input.standalone:active,
+input.standalone.active {
   background-color: #cccccc \9;
 }
 input.searchPage.searchButton:hover,
@@ -1538,7 +1556,9 @@ input.searchPage.searchButton:focus,
 .actionButtons input.context:hover,
 .actionButtons input.context:focus,
 #mail_password input.context:hover,
-#mail_password input.context:focus {
+#mail_password input.context:focus,
+input.standalone:hover,
+input.standalone:focus {
   color: #333333;
   text-decoration: none;
   background-position: 0 -15px;
@@ -1550,7 +1570,8 @@ input.searchPage.searchButton:focus,
 input.searchPage.searchButton:focus,
 .formControls input.context:focus,
 .actionButtons input.context:focus,
-#mail_password input.context:focus {
+#mail_password input.context:focus,
+input.standalone:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
@@ -1562,7 +1583,9 @@ input.searchPage.searchButton:active,
 .actionButtons input.context.active,
 .actionButtons input.context:active,
 #mail_password input.context.active,
-#mail_password input.context:active {
+#mail_password input.context:active,
+input.standalone.active,
+input.standalone:active {
   background-image: none;
   outline: 0;
   -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
@@ -1576,7 +1599,8 @@ input.searchPage.searchButton {
 
 .formControls input.context,
 .actionButtons input.context,
-#mail_password input.context {
+#mail_password input.context,
+input.standalone {
   padding: 8px 12px;
   font: 700 14px/100% Arial,Helvetica,sans-serif !important;
 }
